--- a/AlarmSources/Fax/Fax.csproj
+++ b/AlarmSources/Fax/Fax.csproj
@@ -53,6 +53,9 @@
     <None Update="tesseract\tessdata\configs\quiet">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="tesseract\tessdata\deu.traineddata">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="tesseract\tessdata\eng.traineddata">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
